<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PropEditor</string>
    <string name="filter">Filter</string>
    <string name="menu_settings">Settings</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="loading_wait">Loading&#8230;</string>
    <string name="filtering">Filtering&#8230;</string>
    <string name="loading_properties">Read the properties&#8230;</string>
    <string name="saving_properties">Save the properties&#8230;</string>
    <string name="properties_loaded">Were loaded %d properties.</string>
    <string name="no_properties">No properties</string>
    <string name="error_occurred">An error occurred:</string>
    <string name="no_root_privileges">You do not have root privileges!</string>
    <string name="unable_to_read">Unable to read %s file.</string>
    <string name="exiting">Exiting&#8230;</string>
    
    <!-- Menu items -->
    <string name="menu_item_reload">Reload</string>
    <string name="menu_item_restore">Restore</string>
    <string name="menu_item_add">Add</string>
    <string name="menu_item_exit">Exit</string>
    <string name="menu_item_reboot">Reboot</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_save_to">Save to&#8230;</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_license">Show License</string>
    <string name="menu_item_back">Back</string>
    <string name="menu_item_donate">Donate</string>
    <string name="menu_item_settings">Settings</string>

    <!-- Preferences -->
    <string name="settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="settings_summary">Settings</string>
    <string name="general_settings">General settings</string>
    
    <!-- Context menu -->
    <string name="item_edit">Choose: %s</string>
    <string-array name="menu_list">
        <item>Edit</item>
        <item>Delete</item>
        <item>Add</item>
    </string-array>
    
    <!-- Editor texts -->
    <string name="add_property">Add Property</string>
    <string name="edit_property">Edit Property</string>
    <string name="property_key">Property key</string>
    <string name="property_value">Property value</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <!-- License -->
    <string name="license">License</string>
    
    <!-- Remove property -->
    <string name="restoring">Restoring&#8230;</string>
    <string name="remove_property">Remove property</string>
    <string name="remove_property_question">Do you want to remove the property:\n\"%s\"?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- UI settings -->
    <string name="app_theme_title">Application theme:</string>
    <string name="app_theme_title_param">Application theme: %s</string>
    <string name="app_theme_desc">Set the application theme: light or dark.</string>
    <string-array name="app_theme_labels">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string-array name="app_theme_values" translatable="false">
        <item>dark</item>
        <item>light</item>
    </string-array>
    <string name="su_path_title">SU full path</string>
    <string name="su_path_desc">Touch to set manually the SU path, the path string must be completed with the full folders tree including executable file name, attention is not the APK path/name must be the unix SU executable file.</string>
    <string name="su_path_desc_param">Manually set the SU path to: %s</string>
    <string name="must_restart_application">To apply changes the application will try to restart itself, if the changes are not applied please restart manually the application!</string>

    <!-- Reboot -->
    <string name="reboot">Reboot</string>
    <string name="reboot_confirmation">Are you sure to reboot your device?</string>
    <string name="rebooting">Rebooting&#8230;</string>
    
    <!-- Reload -->
    <string name="reload">Reload confirmation</string>
    <string name="reload_confirmation">Are you sure to reload the build.prop file?\nBy reloading the file you will lose all modifications.</string>
    
    <!-- Restore -->
    <string name="restore">Restore confirmation</string>
    <string name="restore_confirmation">Are you sure to restore your build.prop file?\nBy restoring the file you will lose all modifications.</string>
    <string name="file_restored">The file: %s successfully restored!</string>
    <string name="restore_file_failed">Restoring old file failed!</string>

    <string name="loading_exception_report">Exception occurred during loading: %1$s\nException: %2$s\nMessage: %3$s\nDo you want to send a report using your email default application?</string>
    <string name="loading_exception">Exception occurred during loading: %1$s\nException: %2$s\nMessage: %3$s</string>
    <string name="saving_exception">Exception occurred during saving: %1$s\nException: %2$s\nMessage: %3$s</string>
    <string name="backup_failed">Backing up the old file was failed!</string>
    <string name="new_file_failed">Moving up the new file was failed!</string>
    <string name="file_not_exist">The file: %s don\'t exist!</string>
    <string name="file_saved">The file: %s successfully saved!</string>
    <string name="system_no_mount">Couldn\'t be mounted system partition!</string>
    <string name="destination_folder_null">The destination folder should not be null!</string>
    <string name="destination_folder_not_exist">The destination folder %s does not exist!</string>
    
    <!-- Save to -->
    <string name="save_to">Save to&#8230;</string>
    <string name="save_to_info">Chose a folder to save current properties. Default is your external phone storage, SD Card.</string>
    <string name="points">&#8230;</string>
    <string name="folders">Folders:</string>
    <string name="sdcard">/sdcard</string>
    <string name="no_folders">No folders</string>
    <string name="no_folder_path">You do not provided any folder name!</string>
    <string name="current_folder">..</string>
    <string name="folder_icon">x</string>
    
    <!-- Donation -->
    <string name="donate_title">Donation confirmation</string>
    <string name="donate_message">If you appreciate this application, please do a donation buying PropEditor PRO!\nPressing YES button, you will be sent to PropEditor PRO from Google Play Store.\nThank you for using this application!</string>
    <string name="donate_url"><Data><![CDATA[https://play.google.com/store/apps/details?id=ro.ciubex.propeditorpro]]></Data></string>
    <string name="thank_you_title">Thank you for donation!</string>
    <string name="thank_you_desc">Thank you for the appreciation of my work, buying pro application.</string>

    <!-- Report -->
    <string name="send_error_report_title">PropEditor error report</string>
    <string name="send_error_report">Send error report</string>
    <string name="report_body">Description: </string>
    <string name="send_report">Send report&#8230;</string>
    
    <!-- About -->
    <string name="about">About</string>
    <string name="about_text"><Data><![CDATA[
        <b>Application version: %s</b><br/>
        I created this application to change the host name for my phone.<br/>
        Using this application you can view and modify all properties from your <b>build.prop</b> file.<br/>
        This file is important for your Android system and is stored on the <b>/system</b> partition.<br/>
        Normaly the full path is: <b>/system/build.prop</b><br/>
        <br/>
        Thank you for using this application!<br/>]]></Data></string>

</resources>