<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp" >

    <TextView
        android:id="@+id/current_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_folder" />

    <ListView
        android:id="@+id/folder_list"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1.15" />
    
    <TextView
        android:id="@+id/empty_folder_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_folders"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btn_ok"
            android:text="@string/cancel" />
    </RelativeLayout>

</LinearLayout>